--- a/.verb.md
+++ b/.verb.md
@@ -178,7 +178,7 @@ elit, sed do eiusmod tempor incididunt
 
 
 ## Related projects
-{%%= related(['right-align', 'center-align', 'justify', 'word-wrap']) %}  
+{%= related(['right-align', 'center-align', 'justify', 'word-wrap']) %}  
 
 ## Running tests
 {%= include("tests") %}
