--- a/.verb.md
+++ b/.verb.md
@@ -2,6 +2,22 @@
 
 > {%= description %}
 
+**Examples**
+
+Align text values in an array:
+
+```js
+align([1, 2, 3, 100]);
+//=> ['  1', '  2', '  3', '100']
+```
+
+Or [do stuff like this](./example.js):
+
+![screen shot 2015-06-09 at 2 08 34 am](https://cloud.githubusercontent.com/assets/383994/8051597/7b716fbc-0e4c-11e5-9aef-4493fd22db58.png)
+
+Visit [the example](./example.js) to see how this works.
+
+## Install
 {%= include("install-npm", {save: true}) %}
 
 ## Usage
@@ -178,7 +194,7 @@ elit, sed do eiusmod tempor incididunt
 
 
 ## Related projects
-{%= related(['right-align', 'center-align', 'justify', 'word-wrap']) %}  
+{%= related(['right-align', 'center-align', 'justify', 'word-wrap', 'repeat-string', 'longest']) %}  
 
 ## Running tests
 {%= include("tests") %}
@@ -190,8 +206,8 @@ elit, sed do eiusmod tempor incididunt
 {%= include("author") %}
 
 ## License
-{%= copyright() %}
-{%= license() %}
+{%= copyright({start: 2015, linkify: true}) %}
+{%= license({linkify: true}) %}
 
 ***
 
