--- a/.verb.md
+++ b/.verb.md
@@ -194,7 +194,7 @@ elit, sed do eiusmod tempor incididunt
 
 
 ## Related projects
-{%= related(['right-align', 'center-align', 'justify', 'word-wrap', 'repeat-string', 'longest']) %}  
+{%= related(verb.related.list) %}  
 
 ## Running tests
 {%= include("tests") %}
@@ -207,7 +207,7 @@ elit, sed do eiusmod tempor incididunt
 
 ## License
 {%= copyright({start: 2015, linkify: true}) %}
-{%= license({linkify: true}) %}
+{%= license %}
 
 ***
 
