--- a/.verb.md
+++ b/.verb.md
@@ -1,37 +1,15 @@
-# {%= name %} {%= badge("fury") %} {%= badge("travis") %}
-
-> {%= description %}
-
-**Examples**
-
-Align text values in an array:
-
-```js
-align([1, 2, 3, 100]);
-//=> ['  1', '  2', '  3', '100']
-```
-
-Or [do stuff like this](./example.js):
-
-![screen shot 2015-06-09 at 2 08 34 am](https://cloud.githubusercontent.com/assets/383994/8051597/7b716fbc-0e4c-11e5-9aef-4493fd22db58.png)
-
-Visit [the example](./example.js) to see how this works.
-
-## Install
-{%= include("install-npm", {save: true}) %}
-
 ## Usage
 
 ```js
 var align = require('{%= name %}');
 
-align(text, callback_function_or_integer);
+align(text, function_or_integer);
 ```
 
 **Params**
 
 - `text` can be a **string or array**. If a string is passed, a string will be returned. If an array is passed, an array will be returned. 
-- `callback|integer`: if an integer, the text will be indented by that amount. If a function, it must return an integer representing the amount of leading indentation to use as `align` loops over each line. 
+- `function|integer`: if an integer, the text will be indented by that amount. If a transform function is passed, it must return an object with an `integer` property or an integer representing the amount of leading indentation to use as `align` loops over each line. 
 
 **Example**
 
@@ -54,7 +32,7 @@ To:
     abc
 ```
 
-## callback
+## Transform function
 
 ### params
 
@@ -99,6 +77,20 @@ function centerAlign(len, longest, line, lines) {
 
 
 ## Usage examples
+
+Align text values in an array:
+
+```js
+align([1, 2, 3, 100]);
+//=> ['  1', '  2', '  3', '100']
+```
+
+Or [do stuff like this](./example.js):
+
+![screen shot 2015-06-09 at 2 08 34 am](https://cloud.githubusercontent.com/assets/383994/8051597/7b716fbc-0e4c-11e5-9aef-4493fd22db58.png)
+
+Visit [the example](./example.js) to see how this works.
+
 
 ### Center align
 
@@ -191,24 +183,3 @@ elit, sed do eiusmod tempor incididunt
 ~~~~magna aliqua. Ut enim ad minim
 ~~~~~~~~~~~~~veniam, quis
 ```
-
-
-## Related projects
-{%= related(verb.related.list) %}  
-
-## Running tests
-{%= include("tests") %}
-
-## Contributing
-{%= include("contributing") %}
-
-## Author
-{%= include("author") %}
-
-## License
-{%= copyright({start: 2015, linkify: true}) %}
-{%= license %}
-
-***
-
-{%= include("footer") %}
